[tool.poetry]
name = "gadgeteer"
version = "0.1.0"
description = "A daemon to control your USB Gadgets via json over a unix domain socket."
authors = ["Aria Burrell <litui@litui.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
functionfs = "^0.9.0"
python-daemon = "^2.3.0"
pyjson = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
